tests/rosetta/out/Java/box-the-compass.error
javac: exit status 1
/tmp/BoxTheCompass.java:56: error: incompatible types: double cannot be converted to String
        int x = Integer.parseInt(((h / 11.250000) + 0.500000));
                                                  ^
/tmp/BoxTheCompass.java:70: error: incompatible types: Double cannot be converted to List<Double>
            List<Double> h = headings.get(i);
                                         ^
/tmp/BoxTheCompass.java:72: error: incompatible types: List<Double> cannot be converted to double
            String cp = degrees2compasspoint(h);
                                             ^
/tmp/BoxTheCompass.java:73: error: incompatible types: List<Double> cannot be converted to double
            System.out.println(padLeft(String.valueOf(idx), 4) + "   " + padRight(cp, 19) + " " + format2(h) + "°");
                                                                                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
